# tree-sitter-ard

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  hilight.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ard.h  tree-sitter-ard.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ard/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterArdTests/: TreeSitterArdTests.swift
examples/: example.ard
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: control-flow.txt  enums.txt  extern_functions.txt  for_in_unpacking.txt  function_signatures.txt  functions.txt  imports.txt  iteration.txt  lists.txt  loops.txt  maps.txt  matching.txt  member-access.txt  minimal.txt  nullables.txt  optional.txt  result.txt  scoped_types.txt  structs.txt  todo-sample.kon  traits.txt  try_expressions.txt  tuples.txt  type-union.txt  variables.txt
